--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ espressoCore = "3.7.0"
 
 camerax = "1.5.1"
 hilt = "2.57.2"
+appcompat = "1.7.1"
+material = "1.13.0"
 
 
 
@@ -42,6 +44,8 @@ androidx-camerax-view      = { group = "androidx.camera", name = "camera-view", 
 # Hilt (lib y kapt)
 hilt-android   = { group = "com.google.dagger", name = "hilt-android",  version.ref = "hilt" }
 hilt-compiler  = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
