--- a/feature-camerax-hello/src/main/AndroidManifest.xml
+++ b/feature-camerax-hello/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
     <uses-feature android:name="android.hardware.camera.any" android:required="false"/>
+
 
     <application
         android:name=".MlPlaygroundApp"
