--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,9 @@ hilt = "2.57.2"
 appcompat = "1.7.1"
 material = "1.13.0"
 
+#mlkit
+mlkit-text = "16.0.0"
+
 
 
 [libraries]
@@ -47,6 +50,10 @@ hilt-android   = { group = "com.google.dagger", name = "hilt-android",  version.
 hilt-compiler  = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+
+#ML kit
+mlkit-text-recognition = { group = "com.google.mlkit", name = "text-recognition", version.ref = "mlkit-text" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
